:fire: Add: Post for new location

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-map-gl-geocoder": "^2.2.0",
     "react-scripts": "5.0.1",
     "timeago.js": "^4.0.2",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
