--- a/config.env
+++ b/config.env
@@ -8,3 +8,8 @@ DATABASE_PASSWORD=''
 JWT_SECRET=''
 JWT_EXPIRES_IN="1d" # 1 day
 JWT_COOKIE_EXPIRES_IN = 90
+
+EMAIL_USERNAME=""
+EMAIL_PASSWORD=""
+EMAIL_HOST=""
+EMAIL_PORT=""
