Feat: Auto navigation route to selected point

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-directions": "^4.1.1",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@testing-library/jest-dom": "^5.16.5",
@@ -16,8 +17,8 @@
     "react-map-gl": "^7.0.23",
     "react-map-gl-geocoder": "^2.2.0",
     "react-scripts": "5.0.1",
-    "timeago.js": "^4.0.2",
     "sweetalert": "^2.1.2",
+    "timeago.js": "^4.0.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
